# sketch-learner

./: .gitignore  .gitmodules  README.md  build-singularities.sh  requirements.txt
benchmarks/learning/blocks_3/: p-3-110.pddl  p-3-132.pddl  p-3-138.pddl  p-3-164.pddl  p-3-196.pddl  p-3-4.pddl  p-3-91.pddl  p-3-98.pddl  p-4-10.pddl  p-4-106.pddl  p-4-11.pddl  p-4-113.pddl  p-4-115.pddl  p-4-13.pddl  p-4-144.pddl  p-4-15.pddl  p-4-155.pddl  p-4-157.pddl  p-4-166.pddl  p-4-172.pddl  p-4-184.pddl  p-4-187.pddl  p-4-194.pddl  p-4-2.pddl  p-4-20.pddl  p-4-25.pddl  p-4-26.pddl  p-4-32.pddl  p-4-35.pddl  p-4-36.pddl  p-4-40.pddl  p-4-44.pddl  p-4-5.pddl  p-4-58.pddl  p-4-68.pddl  p-4-75.pddl  p-4-76.pddl  p-4-78.pddl  p-4-80.pddl  p-4-94.pddl  (+45 more)
benchmarks/learning/blocks_4/: p-3-108.pddl  p-3-111.pddl  p-3-156.pddl  p-3-179.pddl  p-3-34.pddl  p-3-47.pddl  p-3-51.pddl  p-3-61.pddl  p-3-66.pddl  p-34-0.pddl  p-37-0.pddl  p-39-0.pddl  p-4-101.pddl  p-4-110.pddl  p-4-112.pddl  p-4-123.pddl  p-4-135.pddl  p-4-144.pddl  p-4-15.pddl  p-4-150.pddl  p-4-151.pddl  p-4-152.pddl  p-4-153.pddl  p-4-155.pddl  p-4-165.pddl  p-4-176.pddl  p-4-181.pddl  p-4-183.pddl  p-4-185.pddl  p-4-28.pddl  p-4-41.pddl  p-4-46.pddl  p-4-47.pddl  p-4-49.pddl  p-4-53.pddl  p-4-54.pddl  p-4-57.pddl  p-4-68.pddl  p-4-72.pddl  p-4-74.pddl  (+63 more)
benchmarks/learning/blocks_4_clear/: p-4-168.pddl  p-4-192.pddl  p-4-39.pddl  p-4-49.pddl  p-5-107.pddl  p-5-109.pddl  p-5-11.pddl  p-5-128.pddl  p-5-139.pddl  p-5-14.pddl  p-5-142.pddl  p-5-143.pddl  p-5-145.pddl  p-5-146.pddl  p-5-148.pddl  p-5-15.pddl  p-5-151.pddl  p-5-158.pddl  p-5-161.pddl  p-5-165.pddl  p-5-169.pddl  p-5-174.pddl  p-5-177.pddl  p-5-183.pddl  p-5-193.pddl  p-5-197.pddl  p-5-21.pddl  p-5-25.pddl  p-5-26.pddl  p-5-32.pddl  p-5-37.pddl  p-5-49.pddl  p-5-5.pddl  p-5-51.pddl  p-5-54.pddl  p-5-68.pddl  p-5-73.pddl  p-5-75.pddl  p-5-76.pddl  p-5-79.pddl  (+5 more)
benchmarks/learning/blocks_4_on/: p-4-119.pddl  p-4-163.pddl  p-4-23.pddl  p-4-26.pddl  p-4-56.pddl  p-4-65.pddl  p-4-78.pddl  p-5-100.pddl  p-5-105.pddl  p-5-106.pddl  p-5-113.pddl  p-5-121.pddl  p-5-127.pddl  p-5-13.pddl  p-5-134.pddl  p-5-15.pddl  p-5-165.pddl  p-5-168.pddl  p-5-179.pddl  p-5-193.pddl  p-5-198.pddl  p-5-2.pddl  p-5-20.pddl  p-5-21.pddl  p-5-22.pddl  p-5-23.pddl  p-5-25.pddl  p-5-35.pddl  p-5-45.pddl  p-5-46.pddl  p-5-49.pddl  p-5-55.pddl  p-5-59.pddl  p-5-66.pddl  p-5-67.pddl  p-5-7.pddl  p-5-81.pddl  p-5-92.pddl  p-5-94.pddl  p-5-95.pddl
benchmarks/learning/childsnack/: p-3-1.0-0.0-2-0.pddl  p-3-1.0-0.0-2-2.pddl  p-3-1.0-0.0-2-4.pddl  p-3-1.0-0.5-1-4.pddl  (+36 more)
code/: requirements.txt
code/planners/: README.md
learning/: blocks_4_clear.py  blocks_4_on.py  delivery.py  gripper.py  main.py  miconic.py  reward.py  spanner.py  verifier.py  visitall.py
learning/d2l/: .gitignore  .gitmodules  requirements.txt
learning/d2l/libs/sse/: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  test.sh
learning/d2l/libs/sse/containers/: Dockerfile  docker-entrypoint.sh
learning/d2l/libs/sse/python/parser/: runner.py
learning/d2l/libs/sse/src/fs/core/: problem.cxx  problem.hxx
learning/d2l/libs/sse/src/fs/core/actions/: action_id.cxx  action_id.hxx  checker.cxx  checker.hxx
learning/d2l/libs/sse/src/fs/core/applicability/: action_managers.cxx  action_managers.hxx  formula_interpreter.cxx
learning/d2l/libs/sse/src/fs/core/constraints/: registry.cxx  registry.hxx
learning/d2l/libs/sse/src/fs/core/languages/fstrips/: language.hxx  language_fwd.hxx  scopes.cxx  scopes.hxx
learning/d2l/libs/sse/src/fs/core/languages/fstrips/operations/: axioms.cxx  basic.cxx  binding.cxx  interpretation.cxx
learning/d2l/libs/sse/src/fs/core/models/: simple_state_model.cxx
learning/d2l/libs/sse/src/fs/core/search/: options.cxx  options.hxx  runner.cxx  utils.hxx
learning/d2l/libs/sse/src/fs/core/search/algorithms/: state_space_expansion.hxx
learning/d2l/libs/sse/src/fs/core/search/drivers/: registry.cxx  setups.cxx  setups.hxx  state_space_expansion.cxx  state_space_expansion.hxx
learning/d2l/libs/sse/src/fs/core/search/nodes/: state_space_expansion_node.hxx
learning/d2l/libs/sse/src/fs/core/utils/: config.cxx  config.hxx  loader.cxx  loader.hxx
learning/d2l/libs/sse/src/fs/core/utils/printers/: printers.cxx  printers.hxx  registry.cxx
learning/d2l/libs/sse/src/planners/generic/: main.cxx
learning/d2l/libs/sse/submodules/lapkt-base/: .gitignore  SConstruct  build.py  install.py
learning/d2l/libs/sse/submodules/lapkt-base/src/lapkt/algorithms/: breadth_first_search.hxx  generic_search.hxx
learning/d2l/libs/sse/submodules/lapkt-base/src/lapkt/search/components/: closed_list_impl.hxx  open_lists.hxx  sorted_open_list_impl.hxx  stl_simple_sorted_open_list.hxx  stl_sorted_open_list.hxx  stl_unordered_map_closed_list.hxx  stl_unsorted_fifo_open_list_test.hxx  stl_unsorted_lifo_open_list.hxx  unsorted_open_list_impl.hxx
learning/d2l/libs/sse/submodules/lapkt-base/src/lapkt/search/interfaces/: hybrid_search_algorithm.hxx  open_list.hxx  search_algorithm.hxx
learning/d2l/libs/sse/submodules/lapkt-base/src/lapkt/tools/: bit_array.cxx  bit_set.cxx  bit_set.hxx  events.hxx  logging.cxx  logging.hxx  utils.hxx
learning/experiments/: Readme.md  blocks_3.py  childsnack.py  delivery.py  grid.py  gripper.py  spanner.py  visitall.py
learning/learner/: blocks_4.py  blocks_4_clear.py  blocks_4_on.py  delivery.py  gripper.py  learner.py  miconic.py  reward.py  spanner.py  verifier.py  visitall.py
testing/experiments/: experiment-dual-bfws.py  experiment-hsiwr.py  experiment-lama-first.py  experiment-siw.py  experiment-siwr-autoscale.py  experiment-siwr-downward.py  experiment-siwr-jair.py  experiment-siwr-sym.py  experiment-siwr-with-symmetry-reduction.py  experiment-siwr-without-sym.py  experiment-siwr-without-symmetry-reduction.py  experiment-siwr.py  experiment_combined.py  parser-singularity-hsiwr.py  parser-singularity-siw-siwr.py  run-singularity-hsiwr.sh  run-singularity-siwr.sh  run-singularity.sh
testing/planners/: build-all-images.sh  build-planners.sh
(+9148 files in other folders)
